fix spacing and remove dead code

--- a/src/components/ChangePasswordForm/ChangePasswordForm.module.css
+++ b/src/components/ChangePasswordForm/ChangePasswordForm.module.css
@@ -6,8 +6,7 @@
   margin-bottom: 50px;
 }
 
-.label,
-.button {
+.label, .button {
   margin-right: 0.5rem;
 }
 
